objects/AAObjWithPickList__c.object
<CustomObject>
    <fields>
        <fullName>GloablList__c</fullName>
        <label>GloablList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalBackupPicklistValSet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GloablMulti__c</fullName>
        <label>GloablMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalList2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multilist__c</fullName>
        <label>MultilistLocal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>multi1</fullName>
                </value>
                <value>
                    <fullName>multi2</fullName>
                </value>
                <value>
                    <fullName>multiN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>backupPickList__c</fullName>
        <label>backupPickListLocal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>val1</fullName>
                </value>
                <value>
                    <fullName>val2</fullName>
                </value>
                <value>
                    <fullName>valN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AAObjWithPickList</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AAObjWithPickList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAObjWithPickListi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>